<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_username_textf" />

    <EditText
        android:id="@+id/RegUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword|textNoSuggestions"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_password_textf"/>

    <EditText
        android:id="@+id/RegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_email_textf"/>

    <EditText
        android:id="@+id/RegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword|textNoSuggestions"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_name_textf" />

    <EditText
        android:id="@+id/RegName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword|textNoSuggestions"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_surname_textf"/>

    <EditText
        android:id="@+id/RegSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>



    <RadioGroup
        android:id="@+id/RegRadioGruop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
        android:id="@+id/RegRadioMale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/reg_male_radiob" />

        <RadioButton
        android:id="@+id/RegRadioFemale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_female_radiob" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:id="@+id/ButtonRegAcc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:background="@color/colorBlack"
            android:layout_margin="10dp"
            android:text="@string/login_register_button"
            android:textColor="@color/colorWhite"/>

<!--TODO spinner-->

    </LinearLayout>


</LinearLayout>
